= BinData Changelog

-== Version NEW_VERSION

* Updated specs to new rspec syntax (0.9).

== Version 0.6.0 (2007-03-28)

* Added 64 bit integers.
* Added floating point numbers.
* Added endian keyword to Struct to reduce the amount of typing needed.

== Version 0.5.1 (2007-03-21)

* Updated documentation.
* Struct now raises an error if a field name shadows an existing method.

== Version 0.5.0 (2007-03-14)

* Initial public release.