@@ -3,65 +3,52 @@
 require File.expand_path(File.dirname(__FILE__)) + '/spec_common'
 require 'bindata/lazy'
 
-# A mock data object that can substitute for BinData::Simple or BinData::Struct
+# A mock data object with customizable fields.
 class MockDataObject
-  def initialize(value = nil, fields = {})
-    @value = value
-    @fields = fields
-  end
-  attr_accessor :value
-
-  def field_names
-    @fields.keys.collect { |k| k.to_s }
-  end
-  def respond_to?(symbol, include_private = false)
-    field_names.include?(symbol.id2name) ? true : super
-  end
-  def method_missing(symbol, *args)
-    @fields[symbol] || super
+  def initialize(fields = {})
+    fields.each do |k,v|
+      self.class.send(:define_method, k.to_sym) { v }
+    end
   end
 end
 
 describe "A single environment" do
   before(:each) do
-    @do1 = MockDataObject.new('v1', :f1 => 'f1')
+    @do1 = MockDataObject.new(:f1 => 'f1')
     @e1 = BinData::LazyEvalEnv.new
     @e1.data_object = @do1
-    @e1.params = {:p1 => 'p1'}
-  end
-
-  it "should evaluate value" do
-    @e1.lazy_eval(lambda { value }).should eql('v1')
-  end
-
-  it "should evaluate index" do
-    @e1.index = 7
-    @e1.lazy_eval(lambda { index }).should eql(7)
-  end
-
-  it "should evaluate offset" do
-    @e1.offset = 9
-    @e1.lazy_eval(lambda { offset }).should eql(9)
-  end
-
-  it "should not resolve any unknown fields" do
-    lambda { @e1.lazy_eval(lambda { unknown }) }.should raise_error(NameError)
-    lambda { @e1.lazy_eval(lambda { p1 }) }.should raise_error(NameError)
-    lambda { @e1.lazy_eval(lambda { f1 }) }.should raise_error(NameError)
+    @e1.add_variable(:v1, 'v1')
   end
 
   it "should accept symbols as a shortcut to lambda" do
-    @e1.index  = 7
-    @e1.offset = 9
-    @e1.lazy_eval(:value).should eql('v1')
-    @e1.lazy_eval(:index).should eql(7)
-    @e1.lazy_eval(:offset).should eql(9)
+    @e1.lazy_eval(lambda { o1 }, :o1 => 'o1').should eql('o1')
+    @e1.lazy_eval(lambda { v1 }).should eql('v1')
+    @e1.lazy_eval(:o1, :o1 => 'o1').should eql('o1')
+    @e1.lazy_eval(:v1).should eql('v1')
+  end
+
+  it "should evaluate overrides" do
+    @e1.lazy_eval(:o1, :o1 => 'o1').should eql('o1')
+  end
+
+  it "should evaluate variables" do
+    @e1.lazy_eval(:v1).should eql('v1')
+  end
+
+  it "should prioritise overrides over variables" do
+    @e1.lazy_eval(:v1, :v1 => 'o1').should eql('o1')
+  end
+
+  it "should not resolve any unknown fields" do
+    lambda { @e1.lazy_eval(:unknown) }.should raise_error(NameError)
+    lambda { @e1.lazy_eval(:p1) }.should raise_error(NameError)
+    lambda { @e1.lazy_eval(:f1) }.should raise_error(NameError)
   end
 end
 
 describe "An environment with one parent" do
   before(:each) do
-    @do2 = MockDataObject.new(nil, :f2 => 'f2', :common => 'field2')
+    @do2 = MockDataObject.new(:f2 => 'f2', :common1 => 'f2', :common2 => 'f2')
     @do1 = MockDataObject.new
 
     @e2 = BinData::LazyEvalEnv.new
@@ -70,7 +57,10 @@ describe "An environment with one parent" do
     @e2.data_object = @do2
     @e1.data_object = @do1
 
-    @e2.params = {:p2 => 'p2', :l2 => lambda { 'l2' }, :common => 'param2'}
+    @e1.add_variable(:common2, 'v1')
+
+    @e2.params = {:p2 => 'p2', :common1 => 'p2', :common2 => 'p2'}
+    @e2.add_variable(:common2, 'v2')
   end
 
   it "should evaluate parent parameter" do
@@ -82,16 +72,20 @@ describe "An environment with one parent" do
   end
 
   it "should prefer parent param over parent field" do
-    @e1.lazy_eval(:common).should eql('param2')
+    @e1.lazy_eval(:common1).should eql('p2')
+  end
+
+  it "should prefer variable over parent param" do
+    @e1.lazy_eval(:common2).should eql('v1')
   end
 end
 
 describe "A nested environment" do
   before(:each) do
-    @do4 = MockDataObject.new(nil, :f4 => 'f4')
-    @do3 = MockDataObject.new(nil, :f3 => 'f3')
-    @do2 = MockDataObject.new(nil, :f2 => 'f2')
-    @do1 = MockDataObject.new(nil, :f1 => 'f1')
+    @do4 = MockDataObject.new(:f4 => 'f4')
+    @do3 = MockDataObject.new(:f3 => 'f3')
+    @do2 = MockDataObject.new(:f2 => 'f2', :fs2 => :s3)
+    @do1 = MockDataObject.new(:f1 => 'f1')
 
     @e4 = BinData::LazyEvalEnv.new
     @e3 = BinData::LazyEvalEnv.new(@e4)
@@ -104,8 +98,10 @@ describe "A nested environment" do
     @e1.data_object = @do1
 
     @e4.params = {:p4 => 'p4', :s4 => 's4', :l4 => 'l4'}
-    @e3.params = {:p3 => 'p3', :s3 => :s4, :l3 => lambda { l4 }}
+    @e3.params = {:p3 => 'p3', :s3 => :s4, :s4 => 'xx', :l3 => lambda { l4 }}
     @e2.params = {:p2 => 'p2', :s2 => :s3, :l2 => lambda { l3 }}
+
+    @e2.add_variable(:v2, 'v2')
   end
 
   it "should access parent environments" do
@@ -116,5 +112,13 @@ describe "A nested environment" do
   it "should cascade lambdas" do
     @e1.lazy_eval(lambda { l2 }).should eql('l4')
     @e1.lazy_eval(lambda { s2 }).should eql('s4')
+  end
+
+  it "should access parent environments by cascading" do
+    @e1.lazy_eval(lambda { p3 }).should eql('p3')
+    @e1.lazy_eval(lambda { p4 }).should eql('p4')
+    @e1.lazy_eval(lambda { v2 }).should eql('v2')
+    @e1.lazy_eval(lambda { s3 }).should eql('s4')
+    @e1.lazy_eval(lambda { fs2 }).should eql('s4')
   end
 end
